--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "json-loader": "^0.5.7",
+    "vue": "^2.6.10",
+    "yaml-loader": "^0.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
