--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "apexcharts": "^3.8.6",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "json-loader": "^0.5.7",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.5.0",
     "yaml-loader": "^0.5.0"
   },
   "devDependencies": {
