--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apexcharts": "^3.8.6",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "express": "^4.17.1",
     "json-loader": "^0.5.7",
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.5.0",
