--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "core-js": "^2.6.5",
     "express": "^4.17.1",
     "json-loader": "^0.5.7",
+    "sass": "^1.22.12",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.5.0",
     "yaml-loader": "^0.5.0"
