--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: node_js
 node_js:
-- node
+  - node
 branches:
   only:
-  - master
+    - master
 script:
-- npm install
-- npm run build
+  - npm install
+  - npm run build
+  - cp -r website dist
+  - cp README.md dist
 deploy:
   provider: heroku
   api_key:
