--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ branches:
     - master
 script:
   - npm install
+  - npm install -g @vuese/cli
+  - vuese gen
   - npm run build
   - cp -r website dist
   - cp README.md dist
