--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@vuese/cli": "^2.8.1",
     "apexcharts": "^3.8.6",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "express": "^4.17.1",
+    "helmet-csp": "^2.9.2",
     "json-loader": "^0.5.7",
     "sass": "^1.22.12",
     "sass-loader": "^8.0.0",
